st:adijust cover image size and add about-me text section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             </ul>
           </div>
         </div>
-        <div class="text-info">
+        <div class="hero-text">
+          <img src="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" alt="" />
+          <h1>IVY KABERE</h1>
           <p>
             Hey, I'm Ivy Kabere<br />
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
@@ -30,9 +32,23 @@
       </div>
     </div>
     <div class="about-me">
-      <div class="hero-text">
-        <div class="cover-image">
-          <img src="images/2axKVyMxZxE-unsplash.jpg" alt="portrait image" />
+      <div class="cover-image">
+        <img src="images/2axKVyMxZxE-unsplash.jpg" alt="portrait image" />
+      </div>
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+          non atque perferendis error assumenda illum itaque hic doloremque
+          cupiditate officiis!
+        </p>
+        <div class="about-details">
+          <p>
+            Name:Ivy Cynthia Kabere
+            <br />
+            Phone: <br />
+            Experience: <br />Age:
+          </p>
         </div>
       </div>
     </div>
