st: add UI changes to hero-section

--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
           <h1>IVY KABERE</h1>
           <p>
             Hey, I'm Ivy Kabere<br />
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita
-            provident consequuntur esse ab corrupti dolorum optio molestiae enim
-            eaque.
+            ...Web Developer
           </p>
         </div>
       </div>
     </div>
+<div class="waves"></div>
     <div class="about-me">
       <div class="cover-image">
         <img src="images/2axKVyMxZxE-unsplash.jpg" alt="portrait image" />
       </div>
       <div class="about-text">
-        <h2>About Me</h2>
+        <h2><span>Ab</span>out Me</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
           non atque perferendis error assumenda illum itaque hic doloremque
@@ -44,13 +43,23 @@
         </p>
         <div class="about-details">
           <p>
-            Name:Ivy Cynthia Kabere
-            <br />
-            Phone: <br />
-            Experience: <br />Age:
+            Here a are a few highlights:
+            <ul>
+              <li>Frontend web developmentand design</li>
+            <li>Interactive frontend as per the design</li>
+            <li>Html,css, Javascript</li>
+          </ul>
           </p>
+          <button>Hire Me</button>
+          <button>Resume</button>
         </div>
       </div>
+    </div>
+    <div class="projects">
+      <div class="z">
+<img src="images/Screenshot 2022-02-23 at 16.36.27.png" alt="">
+</div>
+
     </div>
   </body>
 </html>
