st:add background image to hero-section

--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
     <div class="hero-section">
       <div class="hero-img">
         <div class="navbar">
+          <p><strong><span>I</span>vy</strong></p>
           <div class="navlinks">
             <ul>
+              <li>HOME</li>
               <li>ABOUT ME</li>
               <li>PROJECTS</li>
               <li>CONTACT</li>
             </ul>
           </div>
         </div>
+
         <div class="hero-text">
-          <img src="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" alt="" />
+          <!-- <img src="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" alt="" /> -->
           <h1>IVY KABERE</h1>
           <p>
             Hey, I'm Ivy Kabere<br />
             ...Web Developer
           </p>
         </div>
+
       </div>
+
     </div>
 <div class="waves"></div>
     <div class="about-me">
@@ -56,10 +61,7 @@
       </div>
     </div>
     <div class="projects">
-      <div class="z">
-<img src="images/Screenshot 2022-02-23 at 16.36.27.png" alt="">
-</div>
 
-    </div>
+</div>
   </body>
 </html>
