--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal-Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -61,7 +62,39 @@
       </div>
     </div>
     <div class="projects">
-
+<h2>PROJECTS</h2>
+<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis error voluptates dolor aliquid mollitia pariatur modi fugit odit reprehenderit odio sed porro, at nihil accusantium, quos itaque eius amet. Ad.</P>
+<div class="row">
+  <div class="col-sm-4">
+<div class="card" style="width: ">
+  <img src="images/Screenshot 2022-02-23 at 16.36.27.png" class="card-img-top" alt="...">
+  <div class="card-body">
+   <h3>Lorem Lorem</h3>
+   <p>lorem</p>
+   <a href="">View More</a>
+  </div>
+</div>
+  </div>
+  <div class="col-sm-4">
+<div class="card" style="width: 18rem">
+  <img src="images/Screenshot 2022-02-23 at 15.02.38.png" class="card-img-top" alt="...">
+  <div class="card-body">
+   <h3>Lorem Lorem</h3>
+   <p>lorem</p>
+   <a href="">View More</a>
+  </div>
+</div>
+</div>
+<div class="col-sm-4">
+<div class="card" style="width: 18rem">
+  <img src="images/Screenshot 2022-02-23 at 17.16.28.png" class="card-img-top" alt="...">
+  <div class="card-body">
+   <h3>Lorem Lorem</h3>
+   <p>lorem</p>
+   <a href="">View More</a>
+  </div>
+</div>
+</div>
 </div>
   </body>
 </html>
