st:add images to projects section

--- a/index.html
+++ b/index.html
@@ -62,39 +62,52 @@
       </div>
     </div>
     <div class="projects">
+
 <h2>PROJECTS</h2>
 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis error voluptates dolor aliquid mollitia pariatur modi fugit odit reprehenderit odio sed porro, at nihil accusantium, quos itaque eius amet. Ad.</P>
-<div class="row">
-  <div class="col-sm-4">
-<div class="card" style="width: ">
-  <img src="images/Screenshot 2022-02-23 at 16.36.27.png" class="card-img-top" alt="...">
-  <div class="card-body">
-   <h3>Lorem Lorem</h3>
-   <p>lorem</p>
-   <a href="">View More</a>
+
+<div class="project1">
+<div class="project-img">
+  <h3>Insurance Website Landing-page</h3>
+<img src="images/Screenshot 2022-02-23 at 15.02.38.png" alt="">
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, nobis repudiandae hic exercitationem corrupti consequatur, pariatur aperiam aliquid fugit iste mollitia excepturi soluta vitae perferendis accusantium doloribus sunt molestiae voluptatem.
+</div>
+
+<div class="project-img">
+  <h3>Burger Website Landing-page</h3>
+  <img src="images/Screenshot 2022-02-25 at 01.10.01.png" alt="">
   </div>
 </div>
-  </div>
-  <div class="col-sm-4">
-<div class="card" style="width: 18rem">
-  <img src="images/Screenshot 2022-02-23 at 15.02.38.png" class="card-img-top" alt="...">
-  <div class="card-body">
-   <h3>Lorem Lorem</h3>
-   <p>lorem</p>
-   <a href="">View More</a>
-  </div>
+
+<div class="project2">
+  <div class="project-img">
+    <h3>Calculator</h3>
+    <img src="images/Screenshot 2022-02-25 at 07.20.15.png" alt="">
+    </div>
+
+    <div class="project-img">
+      <h3>Quiz Board</h3>
+      <img src="images/Screenshot 2022-02-25 at 07.27.56.png" alt="">
+      </div>
+    </div>
+
 </div>
-</div>
-<div class="col-sm-4">
-<div class="card" style="width: 18rem">
-  <img src="images/Screenshot 2022-02-23 at 17.16.28.png" class="card-img-top" alt="...">
-  <div class="card-body">
-   <h3>Lorem Lorem</h3>
-   <p>lorem</p>
-   <a href="">View More</a>
-  </div>
-</div>
-</div>
+
+<div class="contact">
+  <form action="">
+<label for="First Name">First Name</label>
+<input type="text">
+<label for="Last Name">Last Name</label>
+<input type="text">
+<label for="Email">Email Address</label>
+<input type="email">
+<label for="Phone Number">Phone Number</label>
+<input type="text">
+<label for="Message">Type your message here:</label>
+<input type="text">
+
+
+  </form>
 </div>
   </body>
 </html>
