add form to contact section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal-Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -14,6 +14,7 @@
         <div class="navbar">
           <p><strong><span>I</span>vy</strong></p>
           <div class="navlinks">
+
             <ul>
               <li>HOME</li>
               <li>ABOUT ME</li>
@@ -64,40 +65,45 @@
     <div class="projects">
 
 <h2>PROJECTS</h2>
-<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis error voluptates dolor aliquid mollitia pariatur modi fugit odit reprehenderit odio sed porro, at nihil accusantium, quos itaque eius amet. Ad.</P>
+<P>.</P>
 
 <div class="project1">
 <div class="project-img">
   <h3>Insurance Website Landing-page</h3>
-<img src="images/Screenshot 2022-02-23 at 15.02.38.png" alt="">
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, nobis repudiandae hic exercitationem corrupti consequatur, pariatur aperiam aliquid fugit iste mollitia excepturi soluta vitae perferendis accusantium doloribus sunt molestiae voluptatem.
+<img src="images/Screenshot 2022-02-23 at 15.02.38.png" alt="Insurance Website landing Page">
+<p>
+An Insurance Website Landing Page. This is where the user first 'lands' on the website before navigating to various pages.<br>Languages used are Html and CSS</p>
 </div>
 
 <div class="project-img">
   <h3>Burger Website Landing-page</h3>
   <img src="images/Screenshot 2022-02-25 at 01.10.01.png" alt="">
+  <p>A landing page for a burger Website.<br>
+  Languages used are Html and CSS</p>
   </div>
 </div>
-
 <div class="project2">
   <div class="project-img">
     <h3>Calculator</h3>
     <img src="images/Screenshot 2022-02-25 at 07.20.15.png" alt="">
+    <p>A calculator that performs basic ariithmetic capabilities such as addition, subtraction, multiplivcation and division.<br>
+    Languages use are Html, CSS and Javascript.</p>
     </div>
 
     <div class="project-img">
       <h3>Quiz Board</h3>
       <img src="images/Screenshot 2022-02-25 at 07.27.56.png" alt="">
+      <p>A Quiz board that prompts user to input the answers of their choice and provides score after submission.<br>
+      Languages used are Html, Css and Javascript.</p>
       </div>
     </div>
 
 </div>
-
+<div class="contact-info">
 <div class="contact">
   <form action="">
-<label for="First Name">First Name</label>
-<input type="text">
-<label for="Last Name">Last Name</label>
+    <h4>Get In touch:</h4>
+<label for="Name">Name</label>
 <input type="text">
 <label for="Email">Email Address</label>
 <input type="email">
@@ -105,9 +111,8 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, nobis repudi
 <input type="text">
 <label for="Message">Type your message here:</label>
 <input type="text">
-
-
   </form>
+</div>
 </div>
   </body>
 </html>
