--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="hero-section">
+    <div class="hero-section" id="hero">
       <div class="hero-img">
         <div class="navbar">
           <p><strong><span>I</span>vy</strong></p>
           <div class="navlinks">
 
             <ul>
-              <li>HOME</li>
-              <li>ABOUT ME</li>
-              <li>PROJECTS</li>
-              <li>CONTACT</li>
+              <li><a href="#hero">HOME</a></li>
+              <li><a href="#about">ABOUT ME</a></li>
+              <li><a href="#projects">PROJECTS</a></li>
+              <li><a href="#contact">CONTACT</a></li>
             </ul>
           </div>
         </div>
@@ -32,12 +32,10 @@
             ...Web Developer
           </p>
         </div>
-
       </div>
-
     </div>
-<div class="waves"></div>
-    <div class="about-me">
+
+    <div class="about-me" id="about">
       <div class="cover-image">
         <img src="images/2axKVyMxZxE-unsplash.jpg" alt="portrait image" />
       </div>
@@ -62,7 +60,7 @@
         </div>
       </div>
     </div>
-    <div class="projects">
+    <div class="projects" id="projects">
 
 <h2>PROJECTS</h2>
 <P>.</P>
@@ -77,8 +75,8 @@ An Insurance Website Landing Page. This is where the user first 'lands' on the w
 
 <div class="project-img">
   <h3>Burger Website Landing-page</h3>
-  <img src="images/Screenshot 2022-02-25 at 01.10.01.png" alt="">
-  <p>A landing page for a burger Website.<br>
+  <img src="images/Screenshot 2022-02-26 at 00.39.08.png" alt="">
+  <p>A landing page for a burger Website. This is where the user first 'lands' on the website before navigating to various pages.<br>
   Languages used are Html and CSS</p>
   </div>
 </div>
@@ -99,7 +97,7 @@ An Insurance Website Landing Page. This is where the user first 'lands' on the w
     </div>
 
 </div>
-<div class="contact-info">
+<div class="contact-info" id="contact">
 <div class="contact">
   <form action="">
     <h4>Get In touch:</h4>
@@ -111,6 +109,7 @@ An Insurance Website Landing Page. This is where the user first 'lands' on the w
 <input type="text">
 <label for="Message">Type your message here:</label>
 <input type="text">
+<input type="button" value="Submit">
   </form>
 </div>
 </div>
