st:add margin to about-me section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="hero-section" id="hero">
       <div class="hero-img">
         <div class="navbar">
-          <p><strong><span>I</span>vy</strong></p>
+          <a href="#hero"><strong><span>I</span>vy</strong></a>
+
           <div class="navlinks">
 
             <ul>
