--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="hero-section" id="hero">
       <div class="hero-img">
         <div class="navbar">
-          <a href="#hero"><strong><span>I</span>vy</strong></a>
-
+          <a href="#hero"
+            ><strong><span>I</span>vy</strong></a
+          >
           <div class="navlinks">
-
             <ul>
               <li><a href="#hero">HOME</a></li>
               <li><a href="#about">ABOUT ME</a></li>
@@ -48,71 +48,82 @@
           cupiditate officiis!
         </p>
         <div class="about-details">
-          <p>
-            Here a are a few highlights:
-            <ul>
-              <li>Frontend web developmentand design</li>
+          <p>Here a are a few highlights:</p>
+
+          <ul>
+            <li>Frontend web developmentand design</li>
             <li>Interactive frontend as per the design</li>
             <li>Html,css, Javascript</li>
           </ul>
-          </p>
-          <button>Hire Me</button>
-          <button>Resume</button>
+          <a href="#contact"><button>Hire Me</button></a>
         </div>
       </div>
     </div>
     <div class="projects" id="projects">
+      <h2>PROJECTS</h2>
+      <p>.</p>
 
-<h2>PROJECTS</h2>
-<P>.</P>
+      <div class="project1">
+        <div class="project-img">
+          <h3>Insurance Website Landing-page</h3>
+          <img
+            src="images/Screenshot 2022-02-23 at 15.02.38.png"
+            alt="Insurance Website landing Page"
+          />
+          <p>
+            An Insurance Website Landing Page. This is where the user first
+            'lands' on the website before navigating to various pages.<br />Languages
+            used are Html and CSS
+          </p>
+        </div>
 
-<div class="project1">
-<div class="project-img">
-  <h3>Insurance Website Landing-page</h3>
-<img src="images/Screenshot 2022-02-23 at 15.02.38.png" alt="Insurance Website landing Page">
-<p>
-An Insurance Website Landing Page. This is where the user first 'lands' on the website before navigating to various pages.<br>Languages used are Html and CSS</p>
-</div>
+        <div class="project-img">
+          <h3>Burger Website Landing-page</h3>
+          <img src="images/Screenshot 2022-02-26 at 00.39.08.png" alt="" />
+          <p>
+            A landing page for a burger Website. This is where the user first
+            'lands' on the website before navigating to various pages.<br />
+            Languages used are Html and CSS
+          </p>
+        </div>
+      </div>
+      <div class="project2">
+        <div class="project-img">
+          <h3>Calculator</h3>
+          <img src="images/Screenshot 2022-02-25 at 07.20.15.png" alt="" />
+          <p>
+            A calculator that performs basic ariithmetic capabilities such as
+            addition, subtraction, multiplivcation and division.<br />
+            Languages use are Html, CSS and Javascript.
+          </p>
+        </div>
 
-<div class="project-img">
-  <h3>Burger Website Landing-page</h3>
-  <img src="images/Screenshot 2022-02-26 at 00.39.08.png" alt="">
-  <p>A landing page for a burger Website. This is where the user first 'lands' on the website before navigating to various pages.<br>
-  Languages used are Html and CSS</p>
-  </div>
-</div>
-<div class="project2">
-  <div class="project-img">
-    <h3>Calculator</h3>
-    <img src="images/Screenshot 2022-02-25 at 07.20.15.png" alt="">
-    <p>A calculator that performs basic ariithmetic capabilities such as addition, subtraction, multiplivcation and division.<br>
-    Languages use are Html, CSS and Javascript.</p>
-    </div>
-
-    <div class="project-img">
-      <h3>Quiz Board</h3>
-      <img src="images/Screenshot 2022-02-25 at 07.27.56.png" alt="">
-      <p>A Quiz board that prompts user to input the answers of their choice and provides score after submission.<br>
-      Languages used are Html, Css and Javascript.</p>
+        <div class="project-img">
+          <h3>Quiz Board</h3>
+          <img src="images/Screenshot 2022-02-25 at 07.27.56.png" alt="" />
+          <p>
+            A Quiz board that prompts user to input the answers of their choice
+            and provides score after submission.<br />
+            Languages used are Html, Css and Javascript.
+          </p>
+        </div>
       </div>
     </div>
-
-</div>
-<div class="contact-info" id="contact">
-<div class="contact">
-  <form action="">
-    <h4>Get In touch:</h4>
-<label for="Name">Name</label>
-<input type="text">
-<label for="Email">Email Address</label>
-<input type="email">
-<label for="Phone Number">Phone Number</label>
-<input type="text">
-<label for="Message">Type your message here:</label>
-<input type="text">
-<input type="button" value="Submit">
-  </form>
-</div>
-</div>
+    <div class="contact-info" id="contact">
+      <div class="contact">
+        <form action="">
+          <h4>Get In touch:</h4>
+          <label for="Name">Name</label>
+          <input type="text" />
+          <label for="Email">Email Address</label>
+          <input type="email" />
+          <label for="Phone Number">Phone Number</label>
+          <input type="text" />
+          <label for="Message">Type your message here:</label>
+          <input type="text" />
+          <input type="button" value="Submit" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
