ft:add readme file

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           <p>
             An Insurance Website Landing Page. This is where the user first
             'lands' on the website before navigating to various pages.<br />Languages
-            used are Html and CSS
+            used are Html and CSS<br />
+            <a href="">View More</a>
           </p>
         </div>
 
@@ -83,7 +84,10 @@
           <p>
             A landing page for a burger Website. This is where the user first
             'lands' on the website before navigating to various pages.<br />
-            Languages used are Html and CSS
+            Languages used are Html and CSS<br />
+            <a href="https://kabere34.github.io/insurance-website-landingpage/"
+              >View More</a
+            >
           </p>
         </div>
       </div>
@@ -94,7 +98,8 @@
           <p>
             A calculator that performs basic ariithmetic capabilities such as
             addition, subtraction, multiplivcation and division.<br />
-            Languages use are Html, CSS and Javascript.
+            Languages use are Html, CSS and Javascript.<br />
+            <a href="">View More</a>
           </p>
         </div>
 
@@ -104,7 +109,8 @@
           <p>
             A Quiz board that prompts user to input the answers of their choice
             and provides score after submission.<br />
-            Languages used are Html, Css and Javascript.
+            Languages used are Html, Css and Javascript.<br />
+            <a href="">View More</a>
           </p>
         </div>
       </div>
