st:add links to projects section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
       <div class="about-text">
         <h2><span>Ab</span>out Me</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-          non atque perferendis error assumenda illum itaque hic doloremque
-          cupiditate officiis!
+          Hello my name is Ivy Kabere, a Kenyan based developer. I have a
+          diverse set of skills ranging from Html,CSS, and Javascript.
         </p>
         <div class="about-details">
           <p>Here a are a few highlights:</p>
