st:make UI changes to hero-section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal-Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Josefin+Slab&family=Old+Standard+TT:ital@1&family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -12,7 +18,7 @@
     <div class="hero-section" id="hero">
       <div class="hero-img">
         <div class="navbar">
-          <a href="#hero"
+          <a href="#hero" id="name"
             ><strong><span>I</span>vy</strong></a
           >
           <div class="navlinks">
@@ -28,10 +34,7 @@
         <div class="hero-text">
           <!-- <img src="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" alt="" /> -->
           <h1>IVY KABERE</h1>
-          <p>
-            Hey, I'm Ivy Kabere<br />
-            ...Web Developer
-          </p>
+          <p>let's talk code.</p>
         </div>
       </div>
     </div>
