add a hobby on about-me section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <li>Frontend web developmentand design</li>
             <li>Interactive frontend as per the design</li>
             <li>Html,css, Javascript</li>
+            <li>Avid dog lover :)</li>
           </ul>
           <a href="#contact"><button>Hire Me</button></a>
         </div>
