--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
             An Insurance Website Landing Page. This is where the user first
             'lands' on the website before navigating to various pages.<br />Languages
             used are Html and CSS<br />
-            <a href="">View More</a>
+            <a href="https://kabere34.github.io/Insurance-Website-Landingpage/"
+              >View More</a
+            >
           </p>
         </div>
 
@@ -88,9 +90,7 @@
             A landing page for a burger Website. This is where the user first
             'lands' on the website before navigating to various pages.<br />
             Languages used are Html and CSS<br />
-            <a href="https://kabere34.github.io/insurance-website-landingpage/"
-              >View More</a
-            >
+            <a href="https://kabere34.github.io/landing-page/">View More</a>
           </p>
         </div>
       </div>
@@ -102,7 +102,7 @@
             A calculator that performs basic ariithmetic capabilities such as
             addition, subtraction, multiplivcation and division.<br />
             Languages use are Html, CSS and Javascript.<br />
-            <a href="">View More</a>
+            <a href="https://kabere34.github.io/calculator/">View More</a>
           </p>
         </div>
 
@@ -113,7 +113,7 @@
             A Quiz board that prompts user to input the answers of their choice
             and provides score after submission.<br />
             Languages used are Html, Css and Javascript.<br />
-            <a href="">View More</a>
+            <a href="https://kabere34.github.io/Quiz-Board/">View More</a>
           </p>
         </div>
       </div>
@@ -122,11 +122,11 @@
       <div class="contact">
         <form action="">
           <h4>Get In touch:</h4>
-          <label for="Name">Name</label>
+          <label for="Name">Name:</label>
           <input type="text" />
-          <label for="Email">Email Address</label>
+          <label for="Email">Email Address:</label>
           <input type="email" />
-          <label for="Phone Number">Phone Number</label>
+          <label for="Phone Number">Phone Number:</label>
           <input type="text" />
           <label for="Message">Type your message here:</label>
           <input type="text" />
