st:make UI changes to anchor tag in projects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         </div>
 
         <div class="hero-text">
-          <!-- <img src="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" alt="" /> -->
           <h1>IVY KABERE</h1>
           <p>let's talk code.</p>
         </div>
@@ -77,10 +76,12 @@
             An Insurance Website Landing Page. This is where the user first
             'lands' on the website before navigating to various pages.<br />Languages
             used are Html and CSS<br />
+          </p>
+          <em>
             <a href="https://kabere34.github.io/Insurance-Website-Landingpage/"
               >View More</a
-            >
-          </p>
+            ></em
+          >
         </div>
 
         <div class="project-img">
@@ -90,8 +91,10 @@
             A landing page for a burger Website. This is where the user first
             'lands' on the website before navigating to various pages.<br />
             Languages used are Html and CSS<br />
-            <a href="https://kabere34.github.io/landing-page/">View More</a>
           </p>
+          <em>
+            <a href="https://kabere34.github.io/landing-page/">View More</a></em
+          >
         </div>
       </div>
       <div class="project2">
@@ -102,8 +105,10 @@
             A calculator that performs basic ariithmetic capabilities such as
             addition, subtraction, multiplivcation and division.<br />
             Languages use are Html, CSS and Javascript.<br />
-            <a href="https://kabere34.github.io/calculator/">View More</a>
           </p>
+          <em>
+            <a href="https://kabere34.github.io/calculator/">View More</a></em
+          >
         </div>
 
         <div class="project-img">
@@ -113,8 +118,10 @@
             A Quiz board that prompts user to input the answers of their choice
             and provides score after submission.<br />
             Languages used are Html, Css and Javascript.<br />
-            <a href="https://kabere34.github.io/Quiz-Board/">View More</a>
           </p>
+          <em>
+            <a href="https://kabere34.github.io/Quiz-Board/">View More</a></em
+          >
         </div>
       </div>
     </div>
